add travis badge

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://travis-ci.org/popperized/open-comp-rsc-popper.svg?branch=master)](https://travis-ci.org/popperized/open-comp-rsc-popper)
+
 Example project to demonstrate a concept of how to share computational research openly meeting important reproducibility demands.
 
 To access the project, first make sure you have Docker installed. Then open a terminal (on Windows your Docker environment), change into this directory and run the script access_lab_YOUR-OS.sh, replacing YOUR-OS with linux, mac or windows7.
